<resources>
    <string name="app_name">login</string>
    <string name="login">登录</string>
    <string name="login_register">还没有账号？去注册 ></string>
    <string name="register">注册</string>
    <string name="login_toast">请输入用户名或密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_yet">请先登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_repassword_hint">请再次输入密码</string>
</resources>
